--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,19 @@
 @font-face {
     font-family: Open-sans;
-    src: url(https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Regular.woff);
+    src: url(blob/main/fonts/OpenSans-Regular.ttf) format('truetype'),
+        url(blob/main/fonts/OpenSans-Regular.woff) format('woff'),
+        url(blob/main/fonts/OpenSans-Regular.woff2) format('woff2')
     font-weight: normal;
+    font-style: normal;
   }
   
   @font-face {
     font-family: Open-sans;
-    src: url(https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Bold.woff);
+    src: url(blob/main/fonts/OpenSans-Bold.ttf) format('truetype'),
+        url(blob/main/fonts/OpenSans-Bold.woff) format('woff'),
+        url(blob/main/fonts/OpenSans-Bold.woff2) format('woff2');
     font-weight: bold;
+    font-style: normal;
   }
   
   body {
