--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     font-family: Open-sans;
     src: url(blob/main/fonts/OpenSans-Regular.ttf) format('truetype'),
         url(blob/main/fonts/OpenSans-Regular.woff) format('woff'),
-        url(blob/main/fonts/OpenSans-Regular.woff2) format('woff2')
+        url(blob/main/fonts/OpenSans-Regular.woff2) format('woff2');
     font-weight: normal;
     font-style: normal;
   }
