--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,19 @@
 @font-face {
     font-family: Open-sans;
-    src: url(blob/main/fonts/OpenSans-Regular.ttf),
-        url(blob/main/fonts/OpenSans-Regular.woff),
-        url(blob/main/fonts/OpenSans-Regular.woff2);
     font-weight: normal;
     font-style: normal;
+    src: url(/fonts/OpenSans-Regular.woff) format('woff');,
+        url(/fonts/OpenSans-Regular.ttf) format('truetype'),
+        url(/fonts/OpenSans-Regular.woff2) format('woff2');
   }
   
   @font-face {
     font-family: Open-sans;
-    src: url(blob/main/fonts/OpenSans-Bold.ttf),
-        url(blob/main/fonts/OpenSans-Bold.woff),
-        url(blob/main/fonts/OpenSans-Bold.woff2);
     font-weight: bold;
-    font-style: normal;
+    font-style: normal;  
+    src: url(/fonts/OpenSans-Bold.woff) format('woff');,
+        url(/fonts/OpenSans-Bold.ttf) format('truetype'),
+        url(/fonts/OpenSans-Bold.woff2) format('woff2');
   }
   
   body {
