--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     font-family: Open-sans;
     font-weight: normal;
     font-style: normal;
-    src: url(/fonts/OpenSans-Regular.woff) format('woff');,
+    src: url(/fonts/OpenSans-Regular.woff) format('woff'),
         url(/fonts/OpenSans-Regular.ttf) format('truetype'),
         url(/fonts/OpenSans-Regular.woff2) format('woff2');
   }
@@ -11,7 +11,7 @@
     font-family: Open-sans;
     font-weight: bold;
     font-style: normal;  
-    src: url(/fonts/OpenSans-Bold.woff) format('woff');,
+    src: url(/fonts/OpenSans-Bold.woff) format('woff'),
         url(/fonts/OpenSans-Bold.ttf) format('truetype'),
         url(/fonts/OpenSans-Bold.woff2) format('woff2');
   }
