--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,17 @@
 @font-face {
     font-family: Open-sans;
     font-weight: normal;
-    font-style: normal;
-    src: url(/fonts/OpenSans-Regular.woff) format('woff'),
-        url(/fonts/OpenSans-Regular.ttf) format('truetype'),
-        url(/fonts/OpenSans-Regular.woff2) format('woff2');
+    src: url(fonts/OpenSans-Regular.woff) format('woff'),
+        url(fonts/OpenSans-Regular.ttf) format('truetype'),
+        url(fonts/OpenSans-Regular.woff2) format('woff2');
   }
   
   @font-face {
     font-family: Open-sans;
     font-weight: bold;
-    font-style: normal;  
-    src: url(/fonts/OpenSans-Bold.woff) format('woff'),
-        url(/fonts/OpenSans-Bold.ttf) format('truetype'),
-        url(/fonts/OpenSans-Bold.woff2) format('woff2');
+    src: url(fonts/OpenSans-Bold.woff) format('woff'),
+        url(fonts/OpenSans-Bold.ttf) format('truetype'),
+        url(fonts/OpenSans-Bold.woff2) format('woff2');
   }
   
   body {
