--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,13 @@
 @font-face {
     font-family: Open-sans;
     font-weight: normal;
-    src: url(fonts/OpenSans-Regular.woff) format('woff'),
-        url(fonts/OpenSans-Regular.ttf) format('truetype'),
-        url(fonts/OpenSans-Regular.woff2) format('woff2');
+    src: url(fonts/OpenSans-Regular.woff);
   }
   
   @font-face {
     font-family: Open-sans;
     font-weight: bold;
-    src: url(fonts/OpenSans-Bold.woff) format('woff'),
-        url(fonts/OpenSans-Bold.ttf) format('truetype'),
-        url(fonts/OpenSans-Bold.woff2) format('woff2');
+    src: url(fonts/OpenSans-Bold.woff);
   }
   
   body {
