--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 @font-face {
     font-family: Open-sans;
     font-weight: normal;
-    src: url(fonts/OpenSans-Regular.woff);
+    src: url('../fonts/OpenSans-Regular.woff');
   }
   
   @font-face {
     font-family: Open-sans;
     font-weight: bold;
-    src: url(fonts/OpenSans-Bold.woff);
+    src: url('../fonts/OpenSans-Bold.woff');
   }
   
   body {
