--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@
   }
   
   body {
+    display: flex;
+    flex-direction: column;
     width: 1660px;
     margin: 0;
     font-family: Open-sans, sans-serif;
@@ -393,6 +395,7 @@
     flex-direction: column;
     margin-left: 240px;
     margin-right: 240px;
+    margin-top: 50px;
   }
   
   .footer__si {
@@ -460,8 +463,8 @@
   }
   
   .in__trends-title {
-    height: 36px;
-    margin-top: 59px;
+    height: 22px;
+    margin-top: 30px;
     margin-bottom: 60px;
     margin-left: auto;
     margin-right: auto;
@@ -631,8 +634,11 @@
   
   .product__img {
     margin: 0;
-    width: 301px;
+    width: 300px;
     height: 205px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
   }
   
   .card__img1 {
@@ -883,3 +889,116 @@
     font-weight: 700;
     border: none;
   }
+
+  @media(max-width: 768px) and (min-width: 361px) {
+    body {
+      width: 100%;
+    }
+
+    .header {
+      padding-top: 29px;
+      height: 390px;
+      background-image: url('../img/banner-bg-tablet.jpg');
+    }
+
+    .header__section {
+      margin-left: 20px;
+      margin-right: 20px;
+      justify-content: space-between;
+    }
+
+    .header__menu {
+      display: flex;
+      visibility: hidden;
+      gap: 35px;
+      width: 462px;
+    }
+
+    .blog__title-content {
+      font-size: 40px;
+    }
+
+    .in__trends {
+      height: auto;
+    }
+
+    .in__trends__title {
+      font-size: 18px;
+    }
+
+    .in__trend-main {
+      flex-wrap: wrap;
+      height: auto;
+      gap: 10px;
+    }
+
+    .in__trend-group {
+      width: 344px;
+      height: 136px;
+    }
+
+    .in__trends-card {
+      width: calc(100% / 2 - 5px);
+      padding: 10px;
+    }
+
+    .body__container {
+      width: 100%;
+      margin-top: 65px;
+      margin-left: auto;
+      margin-right: auto;
+      justify-content: space-around;
+    }
+
+    .blog__section {
+      flex-direction: column;
+      width: 390px;
+    }
+
+    .input-email {
+      width: 91%;
+    }
+    
+    .input-submit {
+      width: 100%;
+    }
+
+    .product__cards {
+      flex-wrap: wrap;
+      gap: 35px;
+      padding-left: 20px;
+    }
+
+    .product__card {
+      width: calc(50% - 35px);
+      padding: 0 23px;
+    }
+
+    .card__img1 {
+      background-image: url('../img/shop-item-tablet1.jpg');
+    }
+  
+    .card__img2 {
+      background-image: url('../img/shop-item-tablet2.jpg');
+    }
+  
+    .card__img3 {
+      background-image: url('../img/shop-item-tablet3.jpg');
+    }
+
+    .footer {
+      display: flex;
+      flex-direction: column;
+      margin-left: 0;
+      margin-right: 0;
+    }
+
+    .banner {
+      display: flex;
+      position: relative;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+    }
+  }
+
