--- a/css/style.css
+++ b/css/style.css
@@ -47,18 +47,21 @@
     background: #000;
     opacity: 0.7;
   }
+
+  .header__logo {
+    position: absolute;
+    top: 30px;
+    left: 240px;
+    width: 179px;
+    height: 41px;
+    z-index: 3;
+  }
   
   .header__section {
     display: flex;
     margin-left: 240px;
     margin-right: 240px;
-    justify-content: space-between;
-  }
-  
-  .header__logo {
-    width: 179px;
-    height: 41px;
-    z-index: 3;
+    justify-content: end;
   }
   
   .header__menu {
@@ -83,6 +86,40 @@
   
   .menu-link:hover {
     text-decoration: underline;
+  }
+
+  .burger {
+    display: none;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    box-sizing: border-box;
+    position: relative;
+    border: none;
+    background: transparent;
+    width: 30px;
+    height: 14px;
+    z-index: 3;
+  }
+
+  .burger::before, .burger::after {
+    content: '';
+    left: 0;
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    border-radius: 10px;
+    background: #fff;
+  }
+
+  .burger::before {
+    top: 0;
+    box-shadow: 0 6px 0 #fff;
+  }
+
+  .burger::after {
+    bottom: 0;
   }
   
   .blog__title {
@@ -751,6 +788,7 @@
 
   .banner__form {
     display: block;
+    position: relative;
     width: 390px;
     height: 589px;
     background-color: #ffffff;
@@ -760,6 +798,21 @@
     margin: auto;
     padding: 40px 30px;
     z-index: 5;
+  }
+
+  .banner__close {
+    content: '';
+    position: absolute;
+    top: -30px;
+    right: -30px;
+    width: 20px;
+    height: 20px;
+    background-image: url('../svg/form-x.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    z-index: 5;
+    cursor: pointer;
   }
 
   .banner__title {
@@ -907,11 +960,26 @@
       justify-content: space-between;
     }
 
+    .header__logo {
+      position: absolute;
+      top: 25px;
+      left: 20px;
+      width: 11rem;
+      height: 2.6rem;
+      z-index: 3;
+    }
+
     .header__menu {
-      display: flex;
-      visibility: hidden;
-      gap: 35px;
-      width: 462px;
+      display: none;
+    }
+
+    .burger {
+      display: block;
+      cursor: pointer;
+    }
+
+    .blog__title {
+      margin-top: 100px;
     }
 
     .blog__title-content {
@@ -1001,4 +1069,236 @@
       z-index: 0;
     }
   }
+  @media(max-width: 360px) {
+    body {
+      width: 100%;
+    }
+
+    .header {
+      padding-top: 10px;
+      height: 100vh;
+      background-image: url('../img/banner-mobile.jpg');
+      width: 100%;
+    }
+
+    .header__logo {
+      position: absolute;
+      top: 30vh;
+      left: 12vw;
+      width: 75vw;
+      height: 18.8vw;
+      z-index: 3;
+    }
+
+    .header__section {
+      display: flex;
+      margin-left: 10px;
+      margin-right: 10px;
+      justify-content: space-between;
+    }
+
+    .header__menu {
+      display: none;
+      visibility: hidden;
+    }
+
+    .burger {
+      display: block;
+      margin-top: 2vh;
+      cursor: pointer;
+      width: 5vw;
+    }
+
+    .blog__title {
+      display: block;
+      box-sizing: border-box;
+      margin-top: 40vh;
+      margin-left: 12vw;
+      z-index: 3;     
+    }
+
+    .blog__title-content {
+      font-size: 26px;
+      line-height: 36px;
+      width: 80vw;
+    }
+
+    .in__trends {
+      height: auto;
+      margin-bottom: 5vh;
+    }
+
+    .in__trends__title {
+      font-size: 16px;
+    }
+
+    .in__trend-main {
+      display: block;
+      height: auto;
+      gap: 10px;
+    }
+
+    .in__trend-group {
+      width: calc(100% - 2vw);
+      height: 136px;
+    }
+
+    .in__trends-card {
+      width: 100vw;
+      margin-bottom: 1vh;
+    }
+
+    .body__container {
+      display: block;
+      width: 100vw;
+      margin: 2vw 0 0 0;
+    }
+
+    .blog__section {
+      display: block;
+      padding: 0 2vw;
+      position: relative;
+    }
+
+    .blog__section::after {
+      content: '';
+      display: block;
+      position: absolute;
+      left: 0;
+      bottom: -4vw;
+      width: 96vw;
+      margin: 0 2vw;
+      height: 3px;
+      background-color: #eeeeee;
+    }
+
+    .blog-image {
+      width: 96vw;
+    }
+
+    .article__header-link {
+      font-size: 14px;
+      line-height: 40px;
+      font-weight: 700;
+    }
+
+    .article__info {
+      font-size: 14px;
+      line-height: 40px;
+    }
+
+    .artticle__title {
+      display: block;
+      width: 96vw;
+      font-size: 16px;
+      line-height: 20px;
+      text-transform: uppercase;
+      color: #0f0d0e;
+      font-weight: 700;
+      margin-top: 10px;
+      margin-bottom: 20px;
+    }
+
+    .article__content {
+      display: block;
+      width: 96vw;
+      font-size: 14px;
+      line-height: 20px;
+      color: #0f0d0e;
+      font-weight: 400;
+    }
+
+    .blog__sidebar {
+      display: block;
+      width: 96vw;
+      padding: 5vh 2vw;
+    }
+
+    .input-search {
+      display: inline-block;
+      width: 85vw;
+      height: 15vw;
+    }
+
+    .search-button {
+      display: inline-block;
+      width: 15vw;
+      height: 15vw;
+    }
+
+    .input-email {
+      width: 92%;
+    }
+    
+    .input-submit {
+      width: 96vw;
+    }
+
+    .aside__tegs-table {
+      font-size: 12px;
+      font-weight: 700;
+      height: 20px;
+    }
+
+    .product__cards {
+      display: block;
+      width: 96vw;
+      padding: 0 2vw;
+      margin-bottom: 0;
+    }
+
+    .product__card {
+      width: 100%;
+      margin-bottom: 7vh;
+    }
+
+    .card__img1 {
+      background-image: url('../img/shop-item-mobile1.jpg');
+    }
+  
+    .card__img2 {
+      background-image: url('../img/shop-item-mobile2.jpg');
+    }
+  
+    .card__img3 {
+      background-image: url('../img/shop-item-mobile3.jpg');
+    }
+
+    .footer {
+      display: block;
+      margin-left: 0;
+      margin-right: 0;
+    }
+
+    .banner {
+      display: flex;
+      position: relative;
+      width: 100vw;
+      height: 100vh;
+      z-index: 0;
+    }
+
+    .banner__form {
+      width: 96vw;
+      height: 550px;
+      margin-left: 2vw;
+      margin-right: 2vw;
+    }
+
+    .banner__textarea {
+      width: 260px;
+      height: 130px;
+    }
+
+    .banner__submit {
+      width: 280px;
+      height: 48px;
+    }
+
+    .banner__close {
+      top: -30px;
+      right: 5px;
+    }
+  }
+ 
 
