--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/** {
+  outline: 1px solid red;
+}*/
+
   @font-face {
     font-family: Open-sans;
     src: url('../fonts/OpenSans-Regular.woff');
@@ -93,8 +97,8 @@
   .burger {
     display: none;
     position: absolute;
-    top: 5px;
-    right: 5px;
+    top: 20px;
+    right: 20px;
     box-sizing: border-box;
     border: none;
     background: transparent;
@@ -146,12 +150,14 @@
   
   .body__container {
     display: flex;
+    box-sizing: border-box;
     flex-wrap: wrap;
     width: 100%;
-    max-width: 1180px;
+    max-width: 1240px;
     margin-top: 65px;
     margin-left: auto;
     margin-right: auto;
+    padding: 0 25px;
     justify-content: space-between;
   }
   
@@ -163,8 +169,8 @@
   
   .blog__section {
     display: flex;
-    width: 780px;
-    min-width: 390px;
+    /*width: 780px;*/
+    /*min-width: 390px;*/
     gap: 20px;
   }
 
@@ -173,7 +179,7 @@
   }
   
   .blog__section-image {
-    width: 390px;
+    max-width: 390px;
     margin: 0;
   }
   
@@ -198,8 +204,9 @@
   }
   
   .artticle__title {
+    width: 350px;
     font-size: 20px;
-    line-height: 24px;
+    /*line-height: 24px;*/
     text-transform: uppercase;
     color: #0f0d0e;
     font-weight: 700;
@@ -234,10 +241,13 @@
     color: #000000;
     font-weight: 700;
   }
+
+  .article-text {
+    max-width: 360px;
+  }
   
   .article__content {
     font-size: 15px;
-    line-height: 22px;
     color: #0f0d0e;
     font-weight: 400;
   }
@@ -322,8 +332,9 @@
   }
   
   .input-search {
+    box-sizing: border-box;
     display: block;
-    width: 250px;
+    width: 230px;
     height: 48px;
     padding-left: 25px;
     background-color: #f4f7f6;
@@ -342,6 +353,7 @@
   }
   
   .search-button {
+    box-sizing: border-box;
     width: 48px;
     height: 48px;
     background-color: #b59f5b;
@@ -352,6 +364,7 @@
   }
   
   .input-email {
+    box-sizing: border-box;
     width: 100%;
     height: 48px;
     padding-left: 25px;
@@ -360,10 +373,12 @@
     color: #000000;
     font-weight: 400;
     background-color: #f5f7f6;
+    margin-bottom: 10px;
   }
   
   .input-submit {
-    width: 106%;
+    box-sizing: border-box;
+    width: 100%;
     height: 48px;
     background-color: #b59f5b;
     border: none;
@@ -417,14 +432,18 @@
   }
   
   .topics-row {
+    display: flex;
+    padding-top: 10px;
     border-bottom: solid 1px #eeeeee;
   }
   
   .aside__topics-index {
+    display: block;
     vertical-align: super;
     padding-left: 5px;
     color: #b69f5c;
-    font-size: 12px;
+    font-size: 11px;
+    font-weight: 700;
   }
   
   .footer {
@@ -453,12 +472,19 @@
     background-size: 20px;
   }
   
-  .list__si:nth-child(2n) {
-    margin: 0 50px;
+  .list__si:nth-child(n+2) {
+    margin-left: 50px;
   }
   
   .visualy-hidden {
-    visibility: hidden;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
   }
   
   .icon__dribbble {
@@ -654,21 +680,23 @@
     box-sizing: border-box;
     display: flex;
     width: 100%;
-    gap: 69px;
+    gap: 70px;
   }
   
   .product__card {
     display: flex;
     box-sizing: border-box;
+    width: calc(100% / 3 - 35px);
     flex-direction: column;
-    padding: 0 23px;
+    /*padding: 0 23px;*/
   }
   
   .product__img {
-    margin: 0;
+    margin: 0 auto;
+    /*width: 100%;*/
   }
   
-    .product__source {
+  .product__source {
     box-sizing: border-box;
     outline: solid 3px #b59f5b;
     outline-offset: 23px;
@@ -922,8 +950,21 @@
     border: none;
   }
 
+  @media(max-width: 1110px) and (min-width: 769px) {
+   
+    .body__container {
+      justify-content: space-around;
+    }
+   
+    .blog__section {
+      flex-direction: column;
+      max-width: 390px;            
+    }
+  }
+
   @media(max-width: 768px) and (min-width: 361px) {
     body {
+      max-width: 768px;
       width: 100%;
     }
 
@@ -934,8 +975,6 @@
     }
 
     .header__section {
-      margin-left: 20px;
-      margin-right: 20px;
       justify-content: space-between;
     }
 
@@ -958,7 +997,8 @@
     }
 
     .blog__title {
-      margin-top: 100px;
+      margin: 100px 0 0 0;
+    
     }
 
     .blog__title-content {
@@ -993,7 +1033,7 @@
 
     .blog__section {
       flex-direction: column;
-      width: 390px;
+      max-width: 390px;            
     }
 
     .input-email {
@@ -1014,19 +1054,7 @@
       width: calc(50% - 35px);
       padding: 0 23px;
     }
-
-    .card__img1 {
-      background-image: url('../img/shop-item-tablet1.jpg');
-    }
-  
-    .card__img2 {
-      background-image: url('../img/shop-item-tablet2.jpg');
-    }
-  
-    .card__img3 {
-      background-image: url('../img/shop-item-tablet3.jpg');
-    }
-
+    
     .footer {
       display: flex;
       flex-direction: column;
@@ -1043,12 +1071,14 @@
 
   @media(max-width: 360px) {
     body {
-      /*width: 100%;*/
+      box-sizing: border-box;
+      max-width: 360px;
+      width: 100%;
     }
 
     .header {
       padding-top: 10px;
-      height: auto;
+      height: 80vh;
       background-image: url('../img/banner-mobile.jpg');
     }
 
@@ -1107,7 +1137,8 @@
     }
 
     .in__trend-group {
-      width: calc(100% - 2vw);
+      width: calc(100% - 4vw);
+      margin: 10px auto;
     }
 
     .in__trends-card {
@@ -1117,11 +1148,12 @@
 
     .body__container {
       display: block;
-      width: 100vw;
+      width: 100%;
       margin: 2vw 0 0 0;
     }
 
     .blog__section {
+      width: calc(100%-4vw);
       display: block;
       padding: 0 2vw;
       position: relative;
@@ -1131,16 +1163,16 @@
       content: '';
       display: block;
       position: absolute;
-      left: 0;
+      left: -2vw;
       bottom: -4vw;
-      width: 96vw;
+      width: 100%;
       margin: 0 2vw;
       height: 3px;
       background-color: #eeeeee;
     }
 
     .blog-image {
-      width: 96vw;
+      width: 100%;
     }
 
     .article__header-link {
@@ -1156,7 +1188,7 @@
 
     .artticle__title {
       display: block;
-      width: 96vw;
+      width: 100%;
       font-size: 16px;
       line-height: 20px;
       text-transform: uppercase;
@@ -1168,7 +1200,7 @@
 
     .article__content {
       display: block;
-      width: 96vw;
+      width: 100%;
       font-size: 14px;
       line-height: 20px;
       color: #0f0d0e;
@@ -1177,28 +1209,26 @@
 
     .blog__sidebar {
       display: block;
-      width: 96vw;
+      width: calc(100% - 4vw);
       padding: 5vh 2vw;
     }
 
     .input-search {
-      display: inline-block;
-      width: 85vw;
+      width: 71vw;
       height: 15vw;
     }
 
     .search-button {
-      display: inline-block;
       width: 15vw;
       height: 15vw;
     }
 
     .input-email {
-      width: 92%;
+      width: 100%;
     }
     
     .input-submit {
-      width: 96vw;
+      width: 100%;
     }
 
     .aside__tegs-table {
@@ -1209,13 +1239,22 @@
 
     .product__cards {
       display: block;
-      width: 96vw;
+      width: 100%;
       padding: 0 2vw;
-      margin-bottom: 0;
+      margin: 0 auto;
     }
 
     .product__card {
+      width: 100%;
       margin-bottom: 7vh;
+    }
+
+    .product__img {
+      width: 100%;
+    }
+
+    .product__source {
+      outline-offset: 23px;
     }
 
     .footer {
@@ -1250,5 +1289,3 @@
       right: 5px;
     }
   }
- 
-
