--- a/css/style.css
+++ b/css/style.css
@@ -695,6 +695,10 @@
     margin: 0 auto;
     /*width: 100%;*/
   }
+
+  .img__desk {
+    width: 100%;
+  }
   
   .product__source {
     box-sizing: border-box;
@@ -964,8 +968,9 @@
 
   @media(max-width: 768px) and (min-width: 361px) {
     body {
-      max-width: 768px;
+      /*max-width: 768px;*/
       width: 100%;
+      margin: 0 auto;
     }
 
     .header {
@@ -978,14 +983,14 @@
       justify-content: space-between;
     }
 
-    .header__logo {
+    /*.header__logo {
       position: absolute;
       top: 25px;
       left: 20px;
       width: 11rem;
       height: 2.6rem;
       z-index: 3;
-    }
+    }*/
 
     .header__menu {
       display: none;
@@ -1019,7 +1024,7 @@
     }
 
     .in__trends-card {
-      width: calc(100% / 2 - 1vw);
+      width: calc(100% / 2 - 1.5vw);
       padding: 1.5vw;
     }
 
@@ -1036,8 +1041,20 @@
       max-width: 390px;            
     }
 
+    .blog-image {
+      max-width: 390px;
+    }
+
+    .input-search {
+      width: 100%;
+    }
+    
+    .search-button {
+      width: 30%;
+    }
+
     .input-email {
-      width: 91%;
+      width: 100%;
     }
     
     .input-submit {
@@ -1046,13 +1063,17 @@
 
     .product__cards {
       flex-wrap: wrap;
-      gap: 35px;
-      padding-left: 20px;
+      gap: 10px;
+      /*padding-left: 20px;*/
     }
 
     .product__card {
-      width: calc(50% - 35px);
+      width: calc(50% - 5px);
       padding: 0 23px;
+    }
+
+    .img__tablet {
+      width: 100%;
     }
     
     .footer {
@@ -1066,6 +1087,20 @@
       display: flex;
       width: 100%;
       height: 100%;
+    }
+  }
+
+  @media(max-width: 560px) {
+    .product__cards {
+      display: block;
+      width: 90%;
+      padding: 0 2vw;
+      margin: 0 auto;
+    }
+
+    .product__card {
+      width: 100%;
+      margin-bottom: 7vh;
     }
   }
 
@@ -1237,7 +1272,7 @@
       height: 20px;
     }
 
-    .product__cards {
+    /*.product__cards {
       display: block;
       width: 100%;
       padding: 0 2vw;
@@ -1247,10 +1282,14 @@
     .product__card {
       width: 100%;
       margin-bottom: 7vh;
-    }
+    }*/
 
     .product__img {
       width: 100%;
+    }
+
+    .img__mobile {
+      width: 100%;      
     }
 
     .product__source {
