--- a/css/style.css
+++ b/css/style.css
@@ -975,6 +975,7 @@
     }
 
     .header {
+      width: 100%;
       padding-top: 29px;
       /*height: 390px*/;
       background-image: url('../img/banner-bg-tablet.jpg');
