--- a/css/style.css
+++ b/css/style.css
@@ -799,12 +799,13 @@
     display: block;
     position: relative;
     width: 390px;
+    height: 600px;
     background-color: #ffffff;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     margin: auto;
-    padding: 40px 30px;
+    padding: 0 30px;
     z-index: 6;
   }
 
@@ -825,7 +826,7 @@
 
   .banner__title {
     font-size: 13px;
-    line-height: 40px;
+    /*line-height: 40px;*/
     color: #000000;
     font-weight: 400;
     margin: 0px;
@@ -1092,6 +1093,15 @@
       width: 100%;
       height: 100%;
     }
+
+    .banner__form {      
+      max-width: 390px;
+      width: 96vw;
+    }
+
+    .banner__close {
+      right: 0px;
+    }
   }
 
   @media(max-width: 560px) {
@@ -1308,28 +1318,32 @@
     .banner {
       display: flex;
       width: 100vw;
+      height: 100vh;
       z-index: 10;
     }
 
     .banner__form {
       width: 96vw;
-      margin-left: 2vw;
-      margin-right: 2vw;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 0 20px;
     }
 
-    .banner__textarea {
-      width: 100%;
+    .banner__textarea { 
+      box-sizing: border-box;     
+      width: calc(96vw - 40px);
       max-width: 260px;
-      min-width: 260px;
+      /*min-width: 260px;*/
     }
 
     .banner__submit {
-      width: 280px;
+      width: 100%;
       height: 48px;
     }
 
     .banner__close {
       top: -30px;
       right: 5px;
+      margin-top: 5px;
     }
   }
